[package]
name = "VeilStrike"
version = "0.1.0"
edition = "2024"

[dependencies]
trust-dns-resolver = "0.23"
tokio = { version = "1.44.2", features = ["full"] }
clap = { version = "4.5.37", features = ["derive"] }
futures = "0.3.31"
url = "2"
psl = { version = "2", features = ["helpers"] }
csv = "1.3.1"
lazy_static = "1.4"
